package com.example.finalprojesicamerax3;

public class DeleteResponse {
    private String result;

    public String getResult() {
        return result;
    }
}
